[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

#changed entry point (creating a binary)
[[bin]]
name = "learning_rust"
path = "src/main.rs"

#creating a second binary, only used cargo build
# [[bin]]
# name = "second_binary"
# path = "src/second_binary_entry_point.rs"

[dependencies]
